@@ -1,3 +1,9 @@
+2020-11-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.cc,
+	  src/SDCClospre.hpp:
+	  Minor comment cleanup.
+
 2020-11-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCClospre.cc,
